--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
     "description": "Another stupid 'chat' app messing with socket.io",
     "main": "server.js",
     "keywords": [
-        "stupid", "chat", "socket.io", "app", "totally original", "whoa", "bro", "express", "practice"
+        "stupid",
+        "chat",
+        "socket.io",
+        "app",
+        "totally original",
+        "whoa",
+        "bro",
+        "express",
+        "practice"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha server/**/*.test.js",
+        "test-watch": "nodemon --exec 'npm test",
         "start": "node server/server.js"
     },
     "engines": {
@@ -15,8 +24,14 @@
     },
     "author": "devin.ragotzy",
     "license": "ISC",
+
     "dependencies": {
         "express": "^4.16.2",
         "socket.io": "^2.0.4"
+    },
+    "devDependencies": {
+        "expect": "^1.20.2",
+        "mocha": "^5.0.1",
+        "nodemon": "^1.17.1"
     }
 }
