when a msg comes addes a li to dom with content, adjusted syle, jquery

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     },
     "author": "devin.ragotzy",
     "license": "ISC",
-
     "dependencies": {
+        "@types/jquery": "^3.3.0",
         "express": "^4.16.2",
         "socket.io": "^2.0.4"
     },
