--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@types/jquery": "^3.3.0",
         "express": "^4.16.2",
+        "moment": "^2.20.1",
         "socket.io": "^2.0.4"
     },
     "devDependencies": {
