--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "scripts": {
         "test": "mocha server/**/*.test.js",
         "test-watch": "nodemon --exec 'npm test",
-        "start": "node server/server.js"
+        "start": "node server/server.js",
+        "bundle": "browserify app.js > bundle.js"
     },
     "engines": {
         "node": "9.2.0"
@@ -31,7 +32,7 @@
         "socket.io": "^2.0.4"
     },
     "devDependencies": {
-        "expect": "^1.20.2",
+        "chai": "^4.1.2",
         "mocha": "^5.0.1",
         "nodemon": "^1.17.1"
     }
