--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "chatter",
-    "version": "0.1.0",
+    "version": "0.9.0",
     "description": "Another stupid 'chat' app messing with socket.io",
     "main": "server.js",
     "keywords": [
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "chai": "^4.1.2",
+        "lodash": "^4.17.5",
         "mocha": "^5.0.1",
         "nodemon": "^1.17.1"
     }
